updated Home and implemented new Pictures

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -591,6 +591,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-20 {
+  gap: 5rem;
+}
+.gap-10 {
+  gap: 2.5rem;
+}
 .gap-y-2 {
   row-gap: 0.5rem;
 }
