--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -181,7 +181,8 @@ body {
 
 .list-card,
 .item-card,
-.invite-card {
+.invite-card,
+.member-card {
     @apply w-full;
     @apply border-2;
     @apply border-gray-200;
@@ -195,7 +196,7 @@ body {
     @apply bg-white;
 }
 
-.itemSelected {
+.itemSelected{
     @apply bg-blue-500 !important;
 }
 
