--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -457,17 +457,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
 }
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 .mt-auto {
   margin-top: auto;
@@ -508,20 +504,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mt-1 {
   margin-top: 0.25rem;
 }
-.mb-auto {
-  margin-bottom: auto;
+.mr-0 {
+  margin-right: 0px;
 }
 .mb-5 {
   margin-bottom: 1.25rem;
 }
 .mr-1 {
   margin-right: 0.25rem;
-}
-.mt-4 {
-  margin-top: 1rem;
-}
-.mr-0 {
-  margin-right: 0px;
 }
 .block {
   display: block;
@@ -544,25 +534,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-4 {
   height: 1rem;
 }
-.h-screen {
-  height: 100vh;
-}
-.h-12 {
-  height: 3rem;
-}
-.h-auto {
-  height: auto;
-}
-.h-max {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-}
-.h-5 {
-  height: 1.25rem;
-}
 .h-10 {
   height: 2.5rem;
+}
+.h-screen {
+  height: 100vh;
 }
 .w-full {
   width: 100%;
@@ -581,12 +557,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-4 {
   width: 1rem;
-}
-.w-12 {
-  width: 3rem;
-}
-.w-5 {
-  width: 1.25rem;
 }
 .w-10 {
   width: 2.5rem;
@@ -638,17 +608,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-y-4 {
   row-gap: 1rem;
 }
-.gap-y-5 {
-  row-gap: 1.25rem;
-}
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -710,13 +675,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .text-center {
   text-align: center;
@@ -795,6 +760,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-red-400 {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1414,10 +1383,6 @@ body {
 }
   @media (min-width: 480px) {
 
-  .xs\:h-full {
-    height: 100%;
-  }
-
   .xs\:w-1\/12 {
     width: 8.333333%;
   }
@@ -1472,10 +1437,6 @@ body {
 }
   @media (min-width: 768px) {
 
-  .md\:m-1 {
-    margin: 0.25rem;
-  }
-
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1501,22 +1462,18 @@ body {
     width: 50%;
   }
 
-  .md\:w-4\/6 {
-    width: 66.666667%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
   }
 
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:text-lg {
