--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -496,9 +496,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.ml-20 {
-  margin-left: 5rem;
-}
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -567,6 +564,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-10 {
   width: 2.5rem;
+}
+.min-w-10 {
+  min-width: 10px;
 }
 .flex-1 {
   flex: 1 1 0%;
